fix: fix a bug of not showing overlay animation

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,5 +1,9 @@
 $headerHeight: 100px;
 
+.home {
+  min-height: 100vh;
+}
+
 .works {
   $marginTop: $headerHeight + 30px;
 
